# llama-rs

./: AGENTS.md  Cargo.toml  README.md  TODO.md
benches/: quantization.rs
docs/: MODEL_COMPATIBILITY.md
docs/plans/: 2026-02-02-llama-rs-design.md
examples/: attention_decompose.rs  attention_scores_debug.rs  check_bias.rs  check_bias_bytes.rs  check_biases.rs  check_config.rs  check_head_layout.rs  check_output_weight.rs  check_rope_type.rs  check_tensor_shapes.rs  check_top_predictions.rs  check_weights.rs  compare_attention_patterns.rs  compare_backend_manual.rs  compare_hidden_states.rs  compare_model_vs_manual.rs  compare_single_layer.rs  debug_ffn.rs  debug_forward_pass.rs  debug_kv_cache.rs  debug_layer0.rs  debug_layer0_detail.rs  debug_multi_token.rs  debug_multipos_attention.rs  debug_q6k_layout.rs  debug_token_1.rs  debug_weights.rs  dump_our_logits.rs  fast_gpu.rs  gpu_inference.rs  gpu_only.rs  gpu_stats.rs  layer0_detailed.rs  layer_by_layer_debug.rs  logit_comparison.rs  minimal_test.rs  test_actual_layer0.rs  test_bias_before_rope.rs  test_components.rs  test_cuda.rs  (+25 more)
src/: huggingface.rs  lib.rs  main.rs
src/backend/: error.rs  mod.rs
src/backend/cpu/: flash_attn.rs  mod.rs  ops.rs  simd.rs
src/backend/cuda/: dequant_weights.rs  fast_inference.rs  gpu_inference.rs  gpu_model.rs  gpu_only.rs  gpu_ops.rs  kernels.rs  mod.rs
src/backend/vulkan/: mod.rs
src/gguf/: error.rs  mod.rs  reader.rs  writer.rs
src/model/: architecture.rs  cache.rs  config.rs  embeddings.rs  error.rs  layers.rs  llama.rs  loader.rs  lora.rs  mod.rs  moe.rs  speculative.rs
src/rag/: config.rs  embedding.rs  knowledge_base.rs  mod.rs  store.rs
src/sampling/: grammar.rs  mod.rs
src/server/: api.rs  batch.rs  handlers.rs  mod.rs  types.rs
src/tensor/: core.rs  dtype.rs  error.rs  mod.rs  storage.rs  tensor.rs
src/tensor/quant/: blocks.rs  dequant.rs  mod.rs
src/tokenizer/: mod.rs
tests/: dequant_test.rs  gguf_reader_test.rs  hidden_state_test.rs  integration_test.rs
