[package]
name = "llama-gguf"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Pegasus Heavy Industries LLC <pegasusheavyindustries@gmail.com>"]
description = "A high-performance Rust implementation of llama.cpp - LLM inference engine with full GGUF support"
repository = "https://github.com/pegasusheavy/llama-rs"
keywords = ["llm", "inference", "gguf", "llama", "ai"]
categories = ["science", "algorithms"]

[lib]
name = "llama_gguf"
path = "src/lib.rs"

[[bin]]
name = "llama-gguf"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cpu", "huggingface", "cli"]
cli = ["dep:clap"]
cpu = []
cuda = ["dep:cudarc"]
vulkan = ["dep:ash", "dep:gpu-allocator"]
metal = ["dep:metal", "dep:objc"]
server = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:futures"]
rag = ["dep:tokio-postgres", "dep:pgvector", "dep:deadpool-postgres", "dep:tokio", "dep:url"]
huggingface = ["dep:reqwest", "dep:indicatif", "dep:directories"]

[dependencies]
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
half = { version = "2.3", features = ["bytemuck"] }
rayon = "1.8"
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4.4", features = ["derive", "env"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
indicatif = { version = "0.17", optional = true }
directories = { version = "5.0", optional = true }

cudarc = { version = "0.12", optional = true, features = ["cuda-12050"] }
ash = { version = "0.38", optional = true }
gpu-allocator = { version = "0.25", optional = true }
metal = { version = "0.28", optional = true }
objc = { version = "0.2", optional = true }

axum = { version = "0.7", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
futures = { version = "0.3", optional = true }

# RAG / pgvector support
tokio-postgres = { version = "0.7", optional = true, features = ["with-serde_json-1"] }
pgvector = { version = "0.4", features = ["postgres"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
url = { version = "2.5", optional = true }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "quantization"
harness = false
